# warehouse-organization-tool

./: README.md  historical.csv  historical.ipynb  inventory.csv  inventory.ipynb  pyproject.toml  requirements.md  ui.py
tests/: test_warehouse_organization_tool.py
warehouse_organization_tool/notebooks/: historical.csv  historical.ipynb  inventory.csv  inventory.ipynb  warehouse.py  warehouse_visualization.ipynb  warehouse_visualization.py
warehouse_organization_tool/terminal_ui_processes/: ui_processes.py
warehouse_organization_tool/utilities/: data.py  df.py  response_class.py  testing_3d_graph.py  user_input.py  warehouse.py  warehouse_visualization.py
warehouse_organization_tool/utilities/welcome_screen/: pattern.txt  welcome_screen.py
