[tool.poetry]
name = "warehouse-organization-tool"
version = "0.1.0"
description = ""
authors = ["Zach Hornung <Zachhornung@comcast.net>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = "^1.2.4"
pygame = "^2.0.1"
jupyterlab = "^3.0.16"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
